src/parse/snapshots/protox__parse__tests__parse_service-9.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Service {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        options: [],
        methods: [
            Method {
                name: Ident {
                    value: "bar",
                    span: 18..21,
                },
                input_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "A",
                                span: 22..23,
                            },
                        ],
                    },
                },
                output_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "B",
                                span: 34..35,
                            },
                            Ident {
                                value: "C",
                                span: 36..37,
                            },
                        ],
                    },
                },
                options: [
                    Option {
                        body: OptionBody {
                            name: [
                                Ident(
                                    Ident {
                                        value: "opt",
                                        span: 48..51,
                                    },
                                ),
                            ],
                            value: Int(
                                Int {
                                    negative: true,
                                    value: 1,
                                    span: 55..56,
                                },
                            ),
                        },
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 41..57,
                    },
                ],
                client_streaming: None,
                server_streaming: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 14..59,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..61,
    },
)
