src/parse/snapshots/protox__parse__tests__parse_service.snap
---
source: src/parse/tests.rs
expression: parser.parse_service()
---
Ok(
    Service {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        options: [],
        methods: [],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..14,
    },
)
