src/parse/snapshots/protox__parse__tests__parse_text_format_message-14.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "foo",
                        span: 0..3,
                    },
                ),
                value: ScalarList(
                    [
                        Ident {
                            negative: true,
                            ident: Ident {
                                value: "enum",
                                span: 7..11,
                            },
                            span: 6..11,
                        },
                    ],
                    5..12,
                ),
                span: 0..12,
            },
        ],
    },
)
