src/parse/snapshots/protox__parse__tests__parse_text_format_message-16.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "an identifier or number",
            found: "\"string\"",
            span: 8..16,
        },
    ],
)
