src/parse/snapshots/protox__parse__tests__parse_text_format_message-5.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "s",
                        span: 0..1,
                    },
                ),
                value: Scalar(
                    String(
                        String {
                            value: "firstsecondthird",
                            span: 3..39,
                        },
                    ),
                ),
                span: 0..39,
            },
            Field {
                name: Ident(
                    Ident {
                        value: "joined",
                        span: 48..54,
                    },
                ),
                value: Scalar(
                    String(
                        String {
                            value: "firstsecondthirdfourth",
                            span: 56..86,
                        },
                    ),
                ),
                span: 48..86,
            },
        ],
    },
)
